--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!-- Example sanitized snippet (replace slot and publisher id in your deployed file):
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-YOURIDHERE"
+             data-ad-client="ca-pub-7601925052503417"
              data-ad-slot="1234567890"
              data-ad-format="auto"></ins>
         <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
